app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-argo-api
spec:
  type: ClusterIP
  selector:
    app: test-argo-api
  ports:
    - port: 8000
      targetPort: 8000
